refactor: refactor H2ShoppingCartRepositoryImpl